Basic toc and split up of LaTex document

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -28,6 +28,14 @@
 
 \include{parts/preface}
 
+\include{parts/plagiarism}
+
+\include{parts/requirements}
+
+\include{parts/developing-unplagged}
+
+\include{parts/appendix}
+
 \bibliography{biblio}
 
 \end{document}
