--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -1,4 +1,4 @@
-\chapter{Developing Unplagged}
+\chapter{Developing Unplagged}\label{chap:developingUnplagged}
 
 \section{Installation}
 \subsection{Tesseract}
