--- a/docs/Developers Manual/parts/title.tex
+++ b/docs/Developers Manual/parts/title.tex
@@ -3,11 +3,10 @@
 
 \begin{center}
 \Huge
-Unplagged\\
+Unplagged Developers Manual\\
 ---\\
 \large
-The Plagiarism Detection Cockpit\\
-Developers Manual\\
+Building the Plagiarism Detection Cockpit\\
 \vfill
 Term paper for the master project I \\ Mentoring Teacher: Prof. Dr. Debora Weber-Wulff\\
 \vspace{1cm}
