just some little notes

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -13,7 +13,7 @@
 \usepackage{listings}
 \usepackage {ellipsis, ragged2e}
 \usepackage[babel]{csquotes}
-
+\usepackage{microtype}
 
 \usepackage[pdfborder={0 0 0}, breaklinks]{hyperref}
 \usepackage[hyphenbreaks]{breakurl}
@@ -23,6 +23,10 @@
 
 \usepackage{graphicx}
 \usepackage{nameref} % gets the name of a chapter when refering to the label with \nameref{chapterName}
+
+%\usepackage{fancyhdr}
+%\pagestyle{fancy}
+
 
 \setlength{\parskip}{0.3cm}
 \linespread {1.25}
