--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -1,5 +1,9 @@
 \chapter{Developing Unplagged}\label{chap:developingUnplagged}
 
+In this chapter we will give an overview over all the important technologies that
+
+As said in section \nameref{platforms}, the system is developed in a way, so that it should work on multiple platforms.
+
 \section{Development Environment}
 
 \subsection{Git}
