--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,8 +1,8 @@
-\chapter{Preface}
+\chapter{Introduction}
 
-Even though the big media coverage and interest in plagiarism in Germany has very much subsided\citep{Google2012} 
-after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis, the initial idea
-for the 
+Even though the big media coverage and interest in plagiarism in Germany has very much subsided 
+after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep{Google2012}, 
+the initial idea for the 
 creation of the \enquote{Unplagged} project, whose development approach will be described here, can be found in this 
 very case of plagiarism. Related to it were the formation of the
 \href{http://de.guttenplag.wikia.com/wiki/GuttenPlag\_Wiki}{GuttenPlag} and it's descendent 
