--- a/docs/Developers Manual/parts/title.tex
+++ b/docs/Developers Manual/parts/title.tex
@@ -4,22 +4,24 @@
 \begin{center}
 \Huge
 Unplagged Developers Manual\\
----\\
 \large
+\vspace{0.5cm}
+\rule[3mm]{1cm}{0.05mm}\\
 Building the Plagiarism Detection Cockpit\\
+\normalsize
 \vfill
 Term paper for the master project I \\ Mentoring Teacher: Prof. Dr. Debora Weber-Wulff\\
-\vspace{1cm}
-\normalsize
+\vfill
+
 Department Economics II\\
 HTW Berlin -- University of Applied Sciences\\
 
-\vspace{4mm}
+\rule{8.5cm}{0.2mm}\\
 Elsa Mahari (s0534217) \href{mailto:elsa.mahari@gmx.de}{\textless Elsa.Mahari@gmx.de\textgreater}\\
 Heiko Stammel (s0534217) \href{mailto:heiko.stammel@googlemail.com}{\textless heiko.stammel@googlemail.com\textgreater}\\
 Benjamin Oertel (s0522720) \href{mailto:benjamin.oertel@me.com}{\textless benjamin.oertel@me.com\textgreater}\\
 Dominik Horb (s0534217) \href{mailto:dominik.horb@googlemail.com}{\textless dominik.horb@googlemail.com\textgreater}\\
-Tien Nguyen (s0534217) \href{mailto:idontwant2missathing@yahoo.com}{\textless idontwant2missathing@yahoo.com\textgreater}\\
+Tien Nguyen (s0534217) \href{mailto:}{\textless \textgreater}\\
 
 
 \end{center}
