--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -28,6 +28,15 @@
   timestamp = {2012.02.25}
 }
 
+@MISC{Trends,
+  author = {Built With Trends, dummy},
+  title = {jQuery Usage Trends},
+  howpublished = {\url{http://trends.builtwith.com/javascript/jQuery}},
+  note = {[accessed online 01.03.12]},
+  owner = {Dominik},
+  timestamp = {2012.03.01}
+}
+
 @MISC{Weber-Wulff2011,
   author = {Dr. Debora Weber-Wulff},
   title = {Master Project: Plagiarism Detection Cockpit},
