--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -34,9 +34,9 @@ passages and a modern project management tool like \href{http://www.redmine.org/
 to manage the collaborative aspects of the system. The big distinction we make to other plagiarism software on the market is, 
 that the approach is not to autodetect plagiarism, but focused on aiding the workflow of the users while  
 searching for plagiarized
-fragments inside a scientific paper, a homework assignment or any other kind of probable plagiarism.
+fragments inside a scientific paper, a homework assignment or any other kind of probable textual plagiarism.
 
-This present document will be your handbook, if you want to get started helping in the development of this 
+This present document will be the handbook that gets you started if you are interested in helping us with the development of this 
 open source project, which is licensed under the \href{http://www.gnu.org/licenses/quick-guide-gplv3}{GNU GPLv3}.
 
 \section{Chapter Overview}
@@ -47,17 +47,17 @@ thesis and therefore the experience we got with actual scientific writing was ve
 field of computer science. We understand the ethical problems, that come with the betrayal of 
 good scientific practice of plagiators, but we simply can not relate easily to the amount of work that has to be put into 
 a Ph D., or be as 
-passionate about plagiarism as Prof. Weber-Wulff always is, because we never experienced it.
+passionate about plagiarism as Prof. Weber-Wulff always is, because we never experienced it ourselves.
 
 That is why we had a lot of catching up to do on the most important history behind VroniPlag, the different types
 of plagiarism, different citation styles and the research Prof. Weber-Wulff and others had already done on systems that try to 
-help finding plagiarism. The chapter \ref{chap:plagOverview}, \nameref{chap:plagOverview}, will
+help finding plagiarism. Chapter \ref{chap:plagOverview}, \nameref{chap:plagOverview}, will
 give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are
 not already familiar with it.
 
 Although we are using agile methods for the development process, the chapter \nameref{chap:systemRequirements} will give
 a more classical collection and description of the parts of the system, that already exist or that we identified as 
-necessary parts of Unplaggedhow we understood the requirements of the 
+necessary parts of Unplagged and how we understood the requirements of the 
 VroniPlag workflow.
 
 If you know all those things already and simply want to get started working and coding, you should probably jump
