Minor typos fixed

--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -21,8 +21,9 @@ know, here is a list of the buzzwords, er technologies that will be mentioned:
 \begin{itemize}
 \item CSS3
 \item HTML5
-\item Continous Integration
+\item Continuous Integration
 \item Responsive Webdesign
+\item Progressive Enhancement
 \item Git
 \item Netbeans
 \item LAMP or similar for your operating system
