--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -64,8 +64,8 @@ first you need to create an account on https://github.com. And then go to the di
 located. An example for Mac~OS~X:
 
 \begin{lstlisting}[caption=Cloning a repository]
-cd Sites/unplagged.local
-git clone https://<yourusername>@github.com/benoertel/unplagged.git
+cd ?Sites/unplagged.local?
+git clone ?https://<yourusername>@github.com/benoertel/unplagged.git?
 \end{lstlisting}
 
 \subsubsection{The most important git commands}
